--- a/src/index.css
+++ b/src/index.css
@@ -84,6 +84,22 @@ h1 {
 	list-style: none;
 }
 
+.card-container {
+	margin-top: 3rem;
+}
+
+.cardImg {
+	min-width: 75%;
+	max-height: 200px;
+	object-fit: cover;
+	border-radius: 15px;
+	margin: 1rem 0;
+}
+
+.cardImg:hover {
+	box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.425);
+}
+
 @media (prefers-color-scheme: light) {
 	:root {
 		color: #213547;
