--- a/src/index.css
+++ b/src/index.css
@@ -30,8 +30,8 @@ a:hover {
 
 body {
 	margin: 0;
-	/* display: flex;
-	place-items: center; */
+	width: 100vw;
+	min-width: 100%;
 	min-width: 320px;
 	min-height: 100vh;
 }
@@ -48,6 +48,7 @@ h1 {
 	flex-direction: row;
 	background-color: #2c2c2c8f;
 	width: 100%;
+	max-width: 100%;
 	padding: 10px;
 }
 
@@ -158,16 +159,35 @@ h1 {
 }
 
 .task-list {
-	width: 100vw;
+	width: 80vw;
+	height: 80vh;
+	background-color: #2c2c2c8f;
+	border-radius: 15px;
 	display: flex;
+	flex-direction: column;
 	align-items: center;
-	justify-content: center;
+	margin: auto;
+	margin-top: 2rem;
+}
+
+.task-list ul {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	display: flex;
+	flex-direction: column;
+	align-items: start;
+	width: 100%;
+	padding-left: 3rem;
+}
+
+.task-list li {
+	margin-top: 2rem;
+	display: flex;
+	align-items: start;
 }
 
 .task-list h1 {
-	height: 80vh;
-	width: 80vw;
-	background-color: rgba(255, 255, 255, 0.13);
 	margin-top: 1.5rem;
 	padding-top: 1.5rem;
 	border-radius: 15px;
