--- a/src/index.css
+++ b/src/index.css
@@ -141,7 +141,7 @@ h1 {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	flex-direction: row;
+	flex-direction: column;
 	width: 100vw;
 }
 
